--- a/NEWS
+++ b/NEWS
@@ -1,91 +1,100 @@
+For release 0.8.1:
+  - getVar()/setVar() (Bernhard)
+  - allow compiling with clang
+  - allow compiling against modern libedit
+  - fix collision with getline(3)
+  - added bats test case and running on travis ci
+  - allow compiling javadocs with JDK 8 and later
+  - do not clobber customer CFLAGS
+
 For release 0.8.0:
-        - added JScheme completer. Provided by Samer Abdallah
-	- added support for Getline (Bernhard)
-        - added support for WIN32	
+  - added JScheme completer. Provided by Samer Abdallah
+  - added support for Getline (Bernhard)
+  - added support for WIN32
 
 For release 0.7.3:
-	- don't add history automatically for each line. Provided by Brian Clapper
-	- removed 1024-byte limitation (useful for long multiline input)
+  - don't add history automatically for each line. Provided by Brian Clapper
+  - removed 1024-byte limitation (useful for long multiline input)
 
 For release 0.7.2:
-	- no functionality changes; only modified build process a bit
- 	  for first libreadline-java release on sourceforge (Henner)
+  - no functionality changes; only modified build process a bit
+    for first libreadline-java release on sourceforge (Henner)
 
 For release 0.7.1:
-       (provided by Henner Zeller <H.Zeller@acm.org>)
-	- provide method hasTerminal() to check, if we are run from a terminal
-          (calls isatty())
-        - make build process work on Solaris
-        - provide RPM-spec file
+    (provided by Henner Zeller <H.Zeller@acm.org>)
+  - provide method hasTerminal() to check, if we are run from a terminal
+    (calls isatty())
+  - make build process work on Solaris
+  - provide RPM-spec file
 
 For release 0.7.0:
-	- bugfix: setCompleter(null) crashed the virtual machine. Now, it sets
-	  the completer back to default behaviour (filename completion)
-	- native functions added:
-	  o cleanupReadlineImpl() does a reset of the readline lib and the
-	    terminal. Exported as 'void cleanup()' to the java user.
-	  o getLineBufferImpl() returns the current line buffer. This is
-	    usually needed within completers to access the _full_ line (the
-	    completer only gets the last word). Exported as
-	    'String getLineBuffer()' to the java user.
-	- documentation: complete example for ReadlineCompleter interface;
-	  better indented example for Readline. Added cleanup() in the example.
-	- declare the 'UnsatisfiedLinkError' in the load() method for
-	  documentation purposes.
-	(all changes provided by Henner Zeller <H.Zeller@acm.org>)
-	- added note about Debian-packages in README
-	- new description on how to make Jython work with JavaReadline
-	(copied from a posting of Steve Cohen <SteveC@ignitesports.com> to
-	jython-users@lists.sourceforge.net)
-	
+  - bugfix: setCompleter(null) crashed the virtual machine. Now, it sets
+    the completer back to default behaviour (filename completion)
+  - native functions added:
+    o cleanupReadlineImpl() does a reset of the readline lib and the
+      terminal. Exported as 'void cleanup()' to the java user.
+    o getLineBufferImpl() returns the current line buffer. This is
+      usually needed within completers to access the _full_ line (the
+      completer only gets the last word). Exported as
+      'String getLineBuffer()' to the java user.
+  - documentation: complete example for ReadlineCompleter interface;
+    better indented example for Readline. Added cleanup() in the example.
+  - declare the 'UnsatisfiedLinkError' in the load() method for
+    documentation purposes.
+    (all changes provided by Henner Zeller <H.Zeller@acm.org>)
+  - added note about Debian-packages in README
+  - new description on how to make Jython work with JavaReadline
+    (copied from a posting of Steve Cohen <SteveC@ignitesports.com> to
+    jython-users@lists.sourceforge.net)
+
 For release 0.6.1:
-        - bugfix: fallback-solution did not throw EOFException
-	- bugfix: missing P ("ureJava") in method Readline.byName() 
+  - bugfix: fallback-solution did not throw EOFException
+  - bugfix: missing P ("ureJava") in method Readline.byName()
 
 For release 0.6:
-	- added ReadlineLibrary
-	- implemented Editline-support
-	- improved documentation
-	
+  - added ReadlineLibrary
+  - implemented Editline-support
+  - improved documentation
+
 For release 0.5.2:
-	- added ReadlineReader (provided by Shane Celis <shane@terrapsring.com>)
-	- added contrib-directory with
-	  * bsh (provided by Shane Celis <shane@terrapsring.com>)
-	  * jpython (moved from my own website into this package)
-	- added section about LICENSING ISSUES in README
-	- updated TODO
-	
+  - added ReadlineReader (provided by Shane Celis <shane@terrapsring.com>)
+  - added contrib-directory with
+    * bsh (provided by Shane Celis <shane@terrapsring.com>)
+    * jpython (moved from my own website into this package)
+  - added section about LICENSING ISSUES in README
+  - updated TODO
+
 For release 0.5.1:
-	- added word break patch (sets rl_completer_word_break_characters,
-	  provided by David Dribin <dave@dribin.org>)
-	
+  - added word break patch (sets rl_completer_word_break_characters,
+    provided by David Dribin <dave@dribin.org>)
+
 For release 0.5:
-	- added code for reading/writing history files
-	  (provided by erik@skiinfo.fr)
-	- added code for setting a custom completer
-	  (provided by erik@skiinfo.fr)
-	- added a sample custom completer
-	- changed ReadlineTest to include new methods
-	
+  - added code for reading/writing history files
+    (provided by erik@skiinfo.fr)
+  - added code for setting a custom completer
+    (provided by erik@skiinfo.fr)
+  - added a sample custom completer
+  - changed ReadlineTest to include new methods
+
 For release 0.43:
-	- rewrote makefile(s)
-	- changed directory structure
-	- moved ReadlineTest to package test
-	- removed file INSTALL
-	
+  - rewrote makefile(s)
+  - changed directory structure
+  - moved ReadlineTest to package test
+  - removed file INSTALL
+
 For release 0.42:
-	- Moved native code to native subdirectory
-	- Reorganized makefiles
+  - Moved native code to native subdirectory
+  - Reorganized makefiles
 
 For release 0.41:
-	- Changed package name to org.gnu.readline (to be SUN compliant)
+  - Changed package name to org.gnu.readline (to be SUN compliant)
 
 For release 0.4:
-	- Added the following methods: readInitFile() and parseAndBind()	
+  - Added the following methods: readInitFile() and parseAndBind()
 
 For release 0.3:
-	- Added UTF-8 to UCS-1 conversion: characters with 8'th bit set are now
-	  supported
+  - Added UTF-8 to UCS-1 conversion: characters with 8'th bit set are now
+    supported
 
 For release 0.2:
-	- Initial public release
+  - Initial public release
