--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+For release 0.8.2:
+  - bugfix: using tab completion would crash the virtual machine.
+
 For release 0.8.1:
   - getVar()/setVar() (Bernhard)
   - unicode support (Andrew)
