--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+For release 0.8.3:
+  - added support for building with newer JDKs. thanks @dlitz
+
 For release 0.8.2:
   - bugfix: using tab completion would crash the virtual machine.
 
