--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+For release 0.8.4:
+  - test with jdk21 (Andrew)
+  - resolve build failures with gcc14 (Andrew)
+  - fix compatibility with readline >= 7.0 (Andrew)
+
 For release 0.8.3:
   - added support for building with newer JDKs. thanks @dlitz
 
